tests/tests/ui-stable/non-string.stderr
thread 'rustc' panicked at 'argument must be a single string literal', impl/src/lib.rs:78:13
note: Run with `RUST_BACKTRACE=1` for a backtrace.
error: proc-macro derive panicked
  --> $DIR/non-string.rs:13:5
   |
13 |     indoc!(64);
   |     ^^^^^^^^^^^
   |
   = help: message: argument must be a single string literal
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

